--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "stripe-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
-    "start": "nodemon index.ts"
+    "start": "nodemon src/index.ts"
   },
   "author": "Borin Ouch",
   "license": "MIT",
