--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl" ".",
+    "baseUrl": ".",
     "target": "es2019",
     "module": "commonjs",
     "lib": [
@@ -9,7 +9,7 @@
       "es2020.bigint",
       "es2020.string"
     ],
-    "noEdmit": true,
+    "noEmit": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
